test-suite/tests/ui/non-display-member.stderr
error[E0277]: `Vec<u8>` doesn't implement `std::fmt::Display`
 --> $DIR/non-display-member.rs:6:5
  |
6 | /     #[table(title = "a")]
7 | |     a: Vec<u8>,
  | |______________^ `Vec<u8>` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `Vec<u8>`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: required because of the requirements on the impl of `std::fmt::Display` for `&Vec<u8>`
  = note: required because of the requirements on the impl of `cli_table::Cell` for `&Vec<u8>`
  = note: required by `cell`
